# NeuroBM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTOMATION_SYSTEM_SUMMARY.md  GITHUB_UPLOAD_COMMANDS.md  INTEGRATION_SUMMARY.md  Makefile  README.md  pyproject.toml  test_neurobm_comprehensive.py  test_neurobm_core.py  test_ptsd_pm_scenario.py  upload_to_github.bat  upload_to_github.ps1
automation/: README.md  deployment_manager.py  integration_pipeline.py  orchestrator.py  requirements.txt  research_monitor.py  test_automation_system.py  version_manager.py
automation/config/: deployment_config.yaml  integration_config.yaml  monitor_config.yaml
configs/: config_manager.py  logging.yaml
configs/sweeps/: comprehensive_sweep.yaml  sweep_hidden_units.yaml  sweep_k_steps.yaml  sweep_temp.yaml
dashboards/: launch_dashboards.py  model_explorer.py  results_analyzer.py  training_monitor.py
docs/: ethics_guidelines.md  responsible_ai_framework.md
docs/data_cards/: synthetic_cognitive_data_card.md
docs/model_cards/: base_cognitive_model_card.md
experiments/: ai_reliance.yaml  autism.yaml  base.yaml  ptsd.yaml  ptsd_pm.yaml
experiments/ablations/: hidden_units.yaml  k_steps.yaml  temp_schedules.yaml
neurobm/: __init__.py
neurobm/interpret/: __init__.py  mutual_info.py  saliency.py  tiles.py  traversals.py
neurobm/models/: __init__.py  crbm.py  dbm.py  rbm.py  utils.py
neurobm/training/: __init__.py  ais.py  callbacks.py  eval.py  loop.py
notebooks/: 01_theory_primer.ipynb  02_base_latents.ipynb  03_ptsd_hypotheses.ipynb  04_autism_hypotheses.ipynb  05_ai_reliance_scenarios.ipynb  06_brain_reserve.ipynb  07_comprehensive_tutorial.ipynb
scripts/: eval_ais.py  make_report.py  neurobm_scaffold.py  sample.py  train.py
tests/: __init__.py  run_tests.py  test_data.py  test_models.py
tools/: manage_results.py  project_structure.yaml  scaffold_experiment.py  setup_dev_env.py  validate_project.py
